--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,8 @@ dependencies {
 
     //Image loading
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
 }
