--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,9 @@ android {
 
 dependencies {
     //Support libraries
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
 
