--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    //Persistence
+    implementation "androidx.room:room-runtime:2.0.0-rc01"
+    annotationProcessor "androidx.room:room-compiler:2.0.0-rc01"
 
     //Image loading
     implementation 'com.squareup.picasso:picasso:2.71828'
