--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,14 @@ android {
 
 dependencies {
     //Support libraries
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    //Livedata dependency
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
     //Persistence
     implementation "androidx.room:room-runtime:2.0.0-rc01"
