--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -21,6 +21,15 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+
+    // Main SDK config
+    compileSdkVersion = 29
+    targetSdkVersion = 29
+    minSdkVersion = 21
+    buildToolsVersion = '29.0.2'
 }
 
 task clean(type: Delete) {
