--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,24 +28,10 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    //Support libraries
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.cardview:cardview:1.0.0'
-
-    //Livedata dependency
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0'
-
-    //Persistence
-    implementation 'androidx.room:room-runtime:2.1.0'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0'
-
-    //Image loading
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
     //Networking
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.6.1"
+
+    //Support libraries
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
