--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+
+    ext {
+
+        // Main SDK config
+        compileSdkVersion = 29
+        targetSdkVersion = 29
+        minSdkVersion = 21
+        buildToolsVersion = '29.0.2'
+
+        kotlin_version = '1.3.50'
+        lifecycle_version = '2.1.0'
+    }
 
     repositories {
         google()
@@ -21,15 +32,6 @@ allprojects {
         google()
         jcenter()
     }
-}
-
-ext {
-
-    // Main SDK config
-    compileSdkVersion = 29
-    targetSdkVersion = 29
-    minSdkVersion = 21
-    buildToolsVersion = '29.0.2'
 }
 
 task clean(type: Delete) {
