--- a/feature_movie/build.gradle
+++ b/feature_movie/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -25,6 +26,24 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    //Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation "com.squareup.retrofit2:converter-moshi:2.6.1"
+    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
+
+
+    //Image loading
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1'
 }
 repositories {
     mavenCentral()
