--- a/feature_movie/build.gradle
+++ b/feature_movie/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -34,10 +35,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     //Networking
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation "com.squareup.retrofit2:converter-moshi:2.6.1"
-    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
-
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     //Image loading
     implementation 'com.squareup.picasso:picasso:2.71828'
