--- a/feature_movie/build.gradle
+++ b/feature_movie/build.gradle
@@ -44,6 +44,13 @@ dependencies {
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
+
+    // Koin for Android - Scope feature
+    // include koin-android-scope & koin-android
+    implementation 'org.koin:koin-android-viewmodel:2.0.1'
 }
 repositories {
     mavenCentral()
