--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,18 +21,33 @@ android {
 
 dependencies {
 
-    implementation project(':feature_movie')
-
+    //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-    //Networking
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation "com.squareup.retrofit2:converter-moshi:2.6.1"
+    implementation 'androidx.core:core-ktx:1.1.0'
 
     //Support libraries
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    //Coroutines and related architecture components
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
 
     // Koin for Android - Scope feature
     // include koin-android-scope & koin-android
     implementation 'org.koin:koin-android-viewmodel:2.0.1'
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    //Networking
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //Image loading
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
