--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,14 @@ dependencies {
 
     //Image loading
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Testing
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.mockito:mockito-inline:3.0.0"
+    testImplementation "org.amshove.kluent:kluent-android:1.53"
+    testImplementation "org.amshove.kluent:kluent:1.53"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0"
+    testImplementation "android.arch.core:core-testing:1.2.0"
+
 }
