--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ buildscript {
         minSdkVersion = 21
         buildToolsVersion = '29.0.2'
 
-        kotlin_version = '1.3.50'
+        kotlin_version = '1.3.61'
         lifecycle_version = '2.1.0'
+        ktorVer ="1.2.2"
+        coroutinesVer = "1.3.0-RC"
     }
 
     repositories {
@@ -22,8 +24,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.0.0-beta04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
