--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -25,9 +25,7 @@ kotlin {
         commonMain {
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib-common"
-                implementation "io.ktor:ktor-client-json:1.2.2"
-                implementation "io.ktor:ktor-client-serialization:1.2.2"
-                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:0.11.1"
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
             }
         }
 
@@ -36,8 +34,7 @@ kotlin {
         androidMain {
             dependencies {
                 implementation kotlin('stdlib')
-                implementation "io.ktor:ktor-client-android:1.2.2"
-                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.1"
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
             }
         }
 
