--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.nanodegree.andrea.popularmoviess">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".MoviesApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
         <activity
-            android:name=".MainActivity"
+            android:name="com.jetbrains.handson.mpp.mobile.MainActivito"
             android:label="ActivityHost"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -21,7 +23,5 @@
             </intent-filter>
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
