--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,5 @@ dependencies {
     implementation project(':domain')
     implementation project(':data')
 
-    api 'androidx.appcompat:appcompat:1.0.2'
-
-    implementation 'org.kodein.di:kodein-di-generic-jvm:6.5.5'
-    implementation 'org.kodein.di:kodein-di-framework-android-x:6.5.5'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 }
