--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MoviesApplication"
+        android:name="io.popularmovies.kmmp.MoviesApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name="com.jetbrains.handson.mpp.mobile.MainActivito"
+            android:name="io.popularmovies.kmmp.MainActivity"
             android:label="ActivityHost"
             android:theme="@style/AppTheme">
             <intent-filter>
