--- a/view/build.gradle
+++ b/view/build.gradle
@@ -22,14 +22,12 @@ android {
 dependencies {
     implementation project(':presentation')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.2.0'
 
-    //Support libraries
-    api 'com.google.android.material:material:1.0.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'com.google.android.material:material:1.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
-
-    implementation 'org.kodein.di:kodein-di-generic-jvm:6.5.5'
-    implementation 'org.kodein.di:kodein-di-framework-android-x:6.5.5'
+    api 'org.kodein.di:kodein-di-generic-jvm:6.5.5'
+    api 'org.kodein.di:kodein-di-framework-android-x:6.5.5'
 }
